• Think I got the filterOptions working on city page (set up helpers to tell the page if there are any filter options set and to display labels for each); • Fixed some layout bugs in cityHeader

--- a/client/templates/city/city.styl
+++ b/client/templates/city/city.styl
@@ -56,6 +56,7 @@
       font-weight 300
       margin 0 3px 5px
       padding 2px 15px
+      text-transform capitalize
       @media screen and (min-width: 768px)
         padding 3px 20px
         margin 0 5px 6px
@@ -71,7 +72,7 @@
     position relative
     @media screen and (min-width: 600px)
       display none
-      visibility none
+      visibility hidden
 
     h3,h4,p
       margin-left -12px
